ceiphr_proj/assets/sass/base.scss
@charset "utf-8";

/**********************************
Bulma/General Settings
**********************************/

// IBM Plex Font
@font-face {
    font-family: "IBM Plex Sans";
    font-style: normal;
    font-weight: 700;
    src: local("IBM Plex Sans Bold"), local("IBMPlexSans-Bold"),
        url("../node_modules/@ibm/plex/IBM-Plex-Sans/fonts/complete/woff2/IBMPlexSans-Bold.woff2") format("woff2"),
        url("../node_modules/@ibm/plex/IBM-Plex-Sans/fonts/complete/woff/IBMPlexSans-Bold.woff") format("woff");
}

@font-face {
    font-family: "IBM Plex Sans";
    font-style: normal;
    font-weight: 400;
    src: local("IBM Plex Sans"), local("IBMPlexSans"),
        url("../node_modules/@ibm/plex/IBM-Plex-Sans/fonts/complete/woff2/IBMPlexSans-Regular.woff2") format("woff2"),
        url("../node_modules/@ibm/plex/IBM-Plex-Sans/fonts/complete/woff/IBMPlexSans-Regular.woff") format("woff");
}

@font-face {
    font-family: "IBM Plex Mono";
    font-style: normal;
    font-weight: 400;
    src: local("IBM Plex Mono"), local("IBMPlexMono"),
        url("../node_modules/@ibm/plex/IBM-Plex-Mono/fonts/complete/woff2/IBMPlexMono-Regular.woff2") format("woff2"),
        url("../node_modules/@ibm/plex/IBM-Plex-Mono/fonts/complete/woff/IBMPlexMono-Regular.woff") format("woff");
}

// Brand color
$gunmetal: #2b2d42;
$gunmetal-light: #4f5274;

// Bulma's global variables
$family-sans-serif: "IBM Plex Sans",
"Helvetica Neue",
Arial,
sans-serif;
$family-code: "IBM Plex Mono",
"Menlo",
"DejaVu Sans Mono",
"Bitstream Vera Sans Mono",
Courier,
monospace;

// Import only what you need from Bulma
@import "../node_modules/bulma/sass/utilities/_all.sass";
@import "../node_modules/bulma/sass/base/_all.sass";
@import "../node_modules/bulma/sass/layout/_all.sass";

@import "../node_modules/bulma/sass/elements/button.sass";
@import "../node_modules/bulma/sass/elements/container.sass";
@import "../node_modules/bulma/sass/elements/box.sass";
@import "../node_modules/bulma/sass/elements/title.sass";
@import "../node_modules/bulma/sass/elements/icon.sass";
@import "../node_modules/bulma/sass/elements/image.sass";
@import "../node_modules/bulma/sass/elements/tag.sass";
@import "../node_modules/bulma/sass/elements/table.sass";

@import "../node_modules/bulma/sass/components/navbar.sass";
@import "../node_modules/bulma/sass/components/card.sass";
@import "../node_modules/bulma/sass/components/media.sass";

@import "../node_modules/bulma/sass/grid/columns.sass";

html,
body {
    background: $white-bis;
}

body {
    position: relative;
    color: black;
    font-family: $family-sans-serif;
    max-width: 100vw;
    min-width: 320px;

    a {
        outline: 0 !important;
    }
}

@media (prefers-color-scheme: dark) {

    body,
    .title,
    .subtitle,
    .feed__info,
    .referral__content,
    article .article__body,
    strong,
    .button,
    .tag,
    .card,
    .footer,
    .footer a {
        color: $white-bis !important;
    }

    svg {
        fill: $white-bis !important;
    }

    body,
    article .article__body .box,
    code,
    .button,
    .tag,
    .footer {
        background-color: #282828 !important;
    }

    .tag:hover,
    article .button:hover,
    article .button:focus {
        opacity: 0.75;
    }

    hr {
        background-color: #282828;
        opacity: 0.75;
    }

    article .article__body .is-8-desktop a:hover {
        color: $link;
        opacity: 0.5;
    }

    .button {
        border-color: #1f1f1f !important;
    }

    .box,
    article .article__body,
    .card {
        background-color: #1f1f1f !important;
    }
}

/**********************************
Animations
**********************************/

.delete:hover,
.modal-close:hover,
.delete:focus,
.modal-close:focus {
    transition-duration: 200ms;
}

.on-hover {
    transition-duration: 200ms;

    &:hover {
        transform: translateY(-4px);
        box-shadow: 0 6px 4px rgba(10, 10, 10, 0.05), 0 0 0 1px rgba(10, 10, 10, 0.1);
    }
}

// On-load
.blur-up {
    -webkit-filter: blur(5px);
    filter: blur(5px);
    transform: scale(1.1);
    transition: transform 400ms 150ms;
    transition-duration: 400ms;
}

.blur-up.lazyloaded {
    -webkit-filter: blur(0);
    filter: blur(0);
    transform: scale(1);
}


/**********************************
Navigaton
**********************************/

.increase-opacity {
    .navbar-menu {
        position: absolute;
        top: 52px;
        width: 100%;
    }

    & {
        background-color: rgba(0, 0, 0, 0.5) !important;
    }
}

.navbar-menu.is-active {
    background-color: rgba(0, 0, 0, 0.5) !important;
    animation: navAnim 400ms ease-in-out;
}

.navbar.increase-opacity {
    transition: 400ms ease-in-out;
}

.navbar-item {
    transition-duration: 200ms;

    .button {
        transition-duration: 200ms;
        border: none;

        &:hover {
            background-color: $white-bis;
            transform: translateY(-1px);
        }
    }

    &:hover {
        background-color: rgba(0, 0, 0, 0.1) !important;
    }

    &:nth-last-of-type(1):hover {
        background-color: rgba(0, 0, 0, 0) !important;
    }
}

.navbar {
    background-color: transparent;

    .navbar-burger span:nth-child(1) {
        top: 50%;
        transform: translateY(-4px);
    }

    .navbar-burger.is-active span:nth-child(1) {
        transform: rotate(45deg);
    }

    .navbar-burger span:nth-child(2) {
        top: 50%;
        transform: translateY(4px);
    }

    .navbar-burger.is-active span:nth-child(2) {
        transform: rotate(-45deg);
        opacity: 1 !important;
    }

    a {
        color: $white !important;
        transition-duration: 200ms;

        &:focus {
            background-color: rgba(0, 0, 0, 0.1) !important;
        }

        img {
            max-width: 1.75rem;
            padding-left: 2px;
        }
    }
}

@keyframes navAnim {
    0% {
        display: none;
        opacity: 0;
    }

    1% {
        display: block;
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}


/**********************************
Text Formatting
**********************************/

::selection {
    background: $link;
    color: $white;
}

blockquote p::selection,
blockquote strong::selection {
    background: $white;
    color: $info;
}

.highlight pre::selection,
.highlight pre::-moz-selection,
.highlight pre span::selection,
.highlight pre span::-moz-selection {
    color: inherit;
    background: rgba(255, 255, 255, 0.15);
}

.highlight pre::selection:window-inactive,
.highlight pre span::selection:window-inactive {
    color: inherit;
    background: rgba(255, 255, 255, 0.25);
}

footer a {
    white-space: nowrap;
    color: $dark !important;

    svg {
        transition-duration: 200ms;
        padding: 0.25em;

        &:hover {
            transform: translateY(-1px);
            opacity: 0.75;
        }
    }
}

.prompt-background {
    background: linear-gradient(270deg, #29323c, #485563);
    width: 100%;
    height: 100vh;
    position: absolute;
    top: 0;
}

.article__detail,
.stats {
    font-family: $family-code;
}

.icon.repo {
    height: 1.2rem;
    width: 1.2rem;
    margin-right: 4px;
}

.stats span {
    white-space: nowrap;
}

.prompt {
    overflow: hidden;

    .button {
        transition-duration: 200ms;
        border: none;

        &:hover {
            background-color: $white-bis;
            transform: translateY(-1px);
        }
    }
}

